plugins/traffic-control/acl/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acl-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: key-auth-acl-plugin,acl-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /acl
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
